--- a/Zadanie 1/Solution/CMakeLists.txt
+++ b/Zadanie 1/Solution/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(Solution src/Solution.cpp)
 
-target_include_directories(Solution PUBLIC inc)
+target_include_directories(Solution PUBLIC inc ../Task/inc)
