--- a/Zadanie 1/CMakeLists.txt
+++ b/Zadanie 1/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Scheduling LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(Heap)
 add_subdirectory(Solution)
 add_subdirectory(Task)
 add_subdirectory(Problem)
@@ -12,7 +13,8 @@ add_executable(Scheduling main.cpp)
 
 target_link_libraries(Scheduling 
     PRIVATE 
+    Heap
+    Problem
     Solution
     Task
-    Problem
 )
