--- a/Zadanie 1/Problem/CMakeLists.txt
+++ b/Zadanie 1/Problem/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(Problem src/Problem.cpp)
 
-target_include_directories(Problem PUBLIC inc ../Task/inc ../Solution/inc)
+target_include_directories(Problem PUBLIC inc ../Task/inc ../Solution/inc ../Heap/Inc)
