--- a/Zadanie 1/Solution/CMakeLists.txt
+++ b/Zadanie 1/Solution/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(Solution src/Solution.cpp)
+add_library(Solution src/Solution.cpp src/Permutation.cpp src/Pair.cpp)
 
 target_include_directories(Solution PUBLIC inc ../Task/inc)
