--- a/Zadanie 4/Problem/CMakeLists.txt
+++ b/Zadanie 4/Problem/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(Problem src/Problem.cpp)
+add_library(Problem src/Problem.cpp src/Function.cpp)
 
 target_include_directories(Problem PUBLIC inc ../Task/inc ../Solution/inc ../Heap/Inc ../Node/inc)
